--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
           <div class="feature__item">
             <div class="feature__icon">
-              <img src="/images/icon-budgeting.svg" />
+              <img src="/images/icon-budgeting.svg" alt="" />
             </div>
             <div class="feature__title">Simple Budgeting</div>
             <div class="feature__description">
@@ -102,7 +102,7 @@
 
           <div class="feature__item">
             <div class="feature__icon">
-              <img src="/images/icon-onboarding.svg" />
+              <img src="/images/icon-onboarding.svg" alt="" />
             </div>
             <div class="feature__title">Fast Onboarding</div>
             <div class="feature__description">
@@ -112,7 +112,9 @@
           </div>
 
           <div class="feature__item">
-            <div class="feature__icon"><img src="/images/icon-api.svg" /></div>
+            <div class="feature__icon">
+              <img src="/images/icon-api.svg" alt="" />
+            </div>
             <div class="feature__title">Open API</div>
             <div class="feature__description">
               Manage your savings, investments, pension, and much more from one
@@ -203,7 +205,7 @@
     <footer class="footer">
       <div class="container">
         <a class="footer__logo" href="#">
-          <img src="/images/logo-dark.svg" />
+          <img src="/images/logo-dark.svg" alt="" />
         </a>
 
         <div class="footer__social">
